[package]
name = "updater"
version = "0.1.0"
edition = "2021"
authors = ["Parfait Detchenou <pdetchenou@gmail.com>",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6.3"